--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -2,9 +2,10 @@
 <div>
   <h1>This is the body from the personal templates</h1>
 
-  <p>{{some_string}}</p>
-  {%for item in list_of_values%}
-  <div>{%include 'personal/snippets/body_snippets.html' with value=item%}</div>
+  {%for question in questions%}
+  <div>
+    {%include 'personal/snippets/body_snippets.html' with value=question%}
+  </div>
 </div>
 
 {%endfor%}{%endblock%}
