--- a/personal/templates/personal/snippets/body_snippets.html
+++ b/personal/templates/personal/snippets/body_snippets.html
@@ -1,2 +1,3 @@
-this from snippets
-<p>{{value}}</p>
+<h3>{{value.title}} | ({{value.priority}})</h3>
+
+<p style="border: 1px solid green">{{value.question}}</p>
