--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,25 +1,16 @@
-{% extends 'base.html' %}
-
-{%block content%}
+{% extends 'base.html' %} {%block content%}
 <h2>Register</h2>
 <form method="post">
- {%csrf_token%}
-  {% for field in registration_form%}
-   <p>
-    {{field.label_tag}}
-    {{field}}
-
-    {%if field.help_text%}
-     <small style="color:grey">{{field.help_text}}</small>
+  {%csrf_token%} {% for field in registration_form%}
+  <p>
+    {{field.label_tag}} {{field}} {%if field.help_text%}
+    <small style="color: grey">{{field.help_text}}</small>
     {%endif%}
-
-    {% for error in field.errors%}
-     <p style="color:red">{{field.help_text}}</p>
-    {%endfor%}
-   </p>
+  </p>
+  {%endfor%} {% for error in field.errors%}
+  <p style="color: red">{{field.help_text}}</p>
   {%endfor%}
   <button type="submit">Register</button>
 </form>
-
 
 {%endblock%}
