--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,9 +1,20 @@
 {% extends 'base.html' %} {% block content %}
-<div>
-  <h1>This is the body from the personal templates</h1>
 
-  {%for account in accounts%}
-  <p>Name: {{account.username}}, Email: {{account}}</p>
+<!-- Top 'create post' bar -->
+<div class="d-lg-none mb-3">
+  <div class="card m-auto d-flex flex-column p-3">
+    <!-- <img class="img-fluid d-block m-auto pb-2" src="#" width="72" height="72"> -->
+    <p class="lead">
+      In this course you'll learn how to build a simple blog with user
+      registration and blog CRUD functionality. Django is a powerful framework
+      and you'll see why in this course.
+    </p>
+    <p class="m-auto"><a class="btn btn-primary" href="#">Create post</a></p>
+  </div>
 </div>
+<!-- end Top 'create post' bar -->
+
+{%for account in accounts%}
+<p>Name: {{account.username}}, Email: {{account}}</p>
 
 {%endfor%}{%endblock%}
