added password reset funtion

--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- Top 'create post' bar -->
-<div class="d-lg-none mb-3">
+<div class="mb-3">
   <div class="card m-auto d-flex flex-column p-3">
     <!-- <img class="img-fluid d-block m-auto pb-2" src="#" width="72" height="72"> -->
     <p class="lead">
