created file and url association for blog urls

--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -40,7 +40,7 @@
 <div class="container">
   <div class="row">
     <div class="create-post-bar d-lg-none col-lg-7 offset-lg-1">
-      <a href="#">Create post</a>
+      <a href="{% url 'blog:create' %}">Create post</a>
     </div>
     <!-- blog feed -->
     <div class="left-column col-lg-7 offset-lg-1">
@@ -67,7 +67,7 @@
         <p>some good stuff</p>
         <p>some good stuff</p>
       </div>
-      <a href="#">Create post</a>
+      <a href="{% url 'blog:create' %}">Create post</a>
     </div>
   </div>
 </div>
