--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block content %} {% load static %}
-
+{% extends 'base.html' %} {% load static %} {% block content %}
 <style type="text/css">
   @media (max-width: 768px) {
     .right-column {
@@ -36,41 +35,72 @@
   }
 </style>
 
-<!-- Top 'create post' bar -->
+<!-- main content -->
 <div class="container">
   <div class="row">
-    <div class="create-post-bar d-lg-none col-lg-7 offset-lg-1">
-      <a href="{% url 'blog:create' %}">Create post</a>
-    </div>
     <!-- blog feed -->
     <div class="left-column col-lg-7 offset-lg-1">
-      <div class="blog-post-container">
-        <p>posts</p>
+      <!-- Top 'create post' bar -->
+      <div class="d-lg-none mb-3">
+        <div class="card m-auto d-flex flex-column p-3">
+          <img
+            class="img-fluid d-block m-auto pb-2"
+            src="{% static 'r-logo.jpg' %}"
+            width="72"
+            height="72"
+          />
+          <p class="lead">
+            In this course you'll learn how to build a simple blog with user
+            registration and blog CRUD functionality. Django is a powerful
+            framework and you'll see why in this course.
+          </p>
+          <p class="m-auto">
+            <a class="btn btn-primary" href="{% url 'blog:create' %}"
+              >Create post</a
+            >
+          </p>
+        </div>
       </div>
+      <!-- end Top 'create post' bar -->
+
+      <!-- Blog posts-->
+      {% for post in blog_posts %}
       <div class="blog-post-container">
-        <p>posts</p>
+        {% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
       </div>
-      <div class="blog-post-container">
-        <p>posts</p>
-      </div>
-      <div class="blog-post-container">
-        <p>posts</p>
-      </div>
+      {% endfor %}
+
+      <!-- End Blog posts-->
+
+      <!-- Pagination -->
+      {% include 'blog/snippets/blog_post_pagination.html' with
+      blog_posts=blog_posts %}
     </div>
-    <!-- blog feed end -->
-    <!-- right column -->
+    <!-- end blog feed -->
+
+    <!-- Right 'create post' column  -->
     <div class="right-column col-lg-3 d-lg-flex d-none flex-column">
-      <div class="create-post-bar">
-        <p>some good stuff</p>
-        <p>some good stuff</p>
-        <p>some good stuff</p>
-        <p>some good stuff</p>
-        <p>some good stuff</p>
+      <div class="card create-post-bar d-flex flex-column p-3">
+        <img
+          class="img-fluid d-block m-auto pb-2"
+          src="{% static 'r-logo.jpg' %}"
+          width="72"
+          height="72"
+        />
+        <p class="lead">
+          In this course you'll learn how to build a simple blog with user
+          registration and blog CRUD functionality. Django is a powerful
+          framework and you'll see why in this course.
+        </p>
+        <p class="m-auto">
+          <a class="btn btn-primary" href="{% url 'blog:create' %}"
+            >Create post</a
+          >
+        </p>
       </div>
-      <a href="{% url 'blog:create' %}">Create post</a>
     </div>
+    <!-- end Right 'create post' column  -->
   </div>
 </div>
-<!-- end Top 'create post' bar -->
 
-{%endblock%}
+{% endblock content %}
