--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -64,11 +64,20 @@
       <!-- end Top 'create post' bar -->
 
       <!-- Blog posts-->
+      {% if blog_posts%}
+      <!-- if there is a post -->
       {% for post in blog_posts %}
       <div class="blog-post-container">
         {% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
       </div>
       {% endfor %}
+      <!--  -->
+      {% else %}
+      <!--  -->
+      <div class="clog-post-container">
+        {% include 'blog/snippets/blog_post_snippet.html' with query=query %}
+      </div>
+      {% endif %}
 
       <!-- End Blog posts-->
 
