--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -49,7 +49,7 @@
 </div>
 
 <!-- End Header -->
-
+<!-- set value -->
 <script type="text/javascript">
   document.getElementById("id_q").value = "{{query}}";
 </script>
