--- a/blog/templates/blog/snippets/blog_post_pagination.html
+++ b/blog/templates/blog/snippets/blog_post_pagination.html
@@ -10,8 +10,11 @@
           >&laquo; Previous</a
         >
       </li>
-      {% endif %} {% for i in blog_posts.paginator.page_range %} {% if
-      blog_posts.number == i %}
+      {% endif %}
+      <!--  -->
+      {% for i in blog_posts.paginator.page_range %}
+      <!-- if -->
+      {% if blog_posts.number == i %}
       <li class="page-item active"><a class="page-link">{{ i }}</a></li>
       {% else %}
       <li class="page-item">
@@ -21,7 +24,12 @@
           >{{ i }}</a
         >
       </li>
-      {% endif %} {% endfor %} {% if blog_posts.has_next %}
+      {% endif %}
+      <!-- endif -->
+
+      {% endfor %}
+      <!--  -->
+      {% if blog_posts.has_next %}
       <li class="page-item">
         <a
           class="page-link"
