--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -74,7 +74,7 @@
       <!--  -->
       {% else %}
       <!--  -->
-      <div class="clog-post-container">
+      <div class="blog-post-container">
         {% include 'blog/snippets/blog_post_snippet.html' with query=query %}
       </div>
       {% endif %}
@@ -82,8 +82,9 @@
       <!-- End Blog posts-->
 
       <!-- Pagination -->
-      {% include 'blog/snippets/blog_post_pagination.html' with
-      blog_posts=blog_posts %}
+      <p>
+        {% include 'blog/snippets/blog_post_pagination.html' with query=query %}
+      </p>
     </div>
     <!-- end blog feed -->
 
